# model-core.go

./: .buildinfo  .gitignore  CHANGELOG.md  Cargo.toml  Package.swift  README.md  api.html  genindex.html  go.mod  go.sum  index.html  metadata.json  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py  tox.ini
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  debug.yml  go-ci.yml  go-pr.yml  go-update-deps.yml  python-ci.yml  python-pr.yml  python-update-reqs.yml  rust-ci.yml  rust-pr.yml  rust-update-reqs.yml  swift-ci.yml
Sources/ModelCore/: Auditable.swift  ModelCore.swift
Tests/ModelCoreTests/: AuditableTests.swift
_modules/: index.html
_sources/: index.rst.txt
_static/: documentation_options.js
data/documentation/: modelcore.json
index/: index.json
models/: auditable.go  property.go  tag.go
old-src/sweetrpg_model_core/: __init__.py
python/: .buildinfo  api.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
python/_modules/: index.html
python/_static/: documentation_options.js
requirements/: dev.in  dev.txt  docs.in  docs.txt  pkg.in  pkg.txt  tests.in  tests.txt
scripts/: update-requirements.sh
src/: constants.rs  lib.rs
src/model/: base.rs
src/schema/: base.rs
src/sweetrpg_model_core/: __init__.py  (+1 more)
swift/: metadata.json
tests/: test_base_schema.py  test_date_convert.py  test_lang_string_field.py  test_lang_strings.py  test_model_conversion.py
vo/: auditable.go  property.go  tag.go
(+29 files in other folders)
