[package]
name = "sweetrpg-model-core"
version = "0.0.1"
description = "Base objects for SweetRPG models."
homepage = "https://sweetrpg-model-core.github.com/"
authors = ["Paul Schifferer <paul@schifferers.net>"]
documentation = "https://sweetrpg-model-core.github.com/"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/sweetrpg/model-core/"
rust-version = "1.72.1"
edition = "2021"

exclude = [
    ".github/*",
    "scripts/*",
    "coverage.svg",
    ".editorconfig",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
